Bug 506353 - Edit transaction can't see the label text
Summary: Edit transaction can't see the label text
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: bugtracker (other bugs)
Version First Reported In: 5.2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-29 17:45 UTC by allencch
Modified: 2025-07-07 19:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
Screenshot (24.47 KB, image/png)
2025-06-29 17:45 UTC, allencch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description allencch 2025-06-29 17:45:42 UTC
Created attachment 182780 [details]
Screenshot

SUMMARY

On Arch Linux with KMyMoney 5.2 which is based on Qt6, it has issue when editing a transaction.
By using Fusion theme with qt6ct (and qt5ct), the background showing black together with black text (as in the screenshot). Other areas are fine, just the edit transaction has this issue.

STEPS TO REPRODUCE
1. Open KMyMoney
2. Edit a transaction
3. See the transaction form that is black background with black text.

OBSERVED RESULT

Can't read the field label text, as the background is black.

EXPECTED RESULT

It should show the white background as the theme and black text.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux without running KDE
KDE Plasma Version: n/a
KDE Frameworks Version: n/a
Qt Version: Qt6

ADDITIONAL INFORMATION

After using Gammaray to debug, the issue happens on `NewTransactionEditor` component.
By editing the `autoFillBackground` to true, then the background becomes white without any issue.
Comment 1 Thomas Baumgart 2025-07-07 19:22:45 UTC
Git commit 30d36794a051febaa5a72ec3e6e23da83a4230be by Thomas Baumgart.
Committed on 07/07/2025 at 19:22.
Pushed by tbaumgart into branch 'master'.

Fix background color of transaction and split editor
FIXED-IN: 5.2.1

M  +2    -0    kmymoney/views/newspliteditor.cpp
M  +2    -0    kmymoney/views/transactioneditorbase.cpp

https://invent.kde.org/office/kmymoney/-/commit/30d36794a051febaa5a72ec3e6e23da83a4230be
Comment 2 Thomas Baumgart 2025-07-07 19:23:37 UTC
Git commit 32749c5d0e781f78636d5db73204957344db7190 by Thomas Baumgart.
Committed on 07/07/2025 at 19:23.
Pushed by tbaumgart into branch '5.2'.

Fix background color of transaction and split editor
FIXED-IN: 5.2.1
(cherry picked from commit f727b04d0ee0b868213ac03b03d89505c307f813)

M  +2    -0    kmymoney/views/newspliteditor.cpp
M  +2    -0    kmymoney/views/transactioneditorbase.cpp

https://invent.kde.org/office/kmymoney/-/commit/32749c5d0e781f78636d5db73204957344db7190