Fix background color of transaction and split editor

BUG: 506353
FIXED-IN: 5.2.1