kmymoney/views/transactioneditorbase.cpp
@@ -72,6 +72,8 @@ TransactionEditorBase::TransactionEditorBase(QWidget* parent, const QString& acc
 {
     Q_UNUSED(accountId)
     d->frameCollection = new WidgetHintFrameCollection(this);
+    setAutoFillBackground(true);
+    setBackgroundRole(QPalette::Highlight);
 #if 0
     d->focusFrame = new WidgetHintFrame(this, WidgetHintFrame::Focus);
     WidgetHintFrame::show(this);
